plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.0' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id "io.freefair.lombok" version "9.1.0" apply false
    id "com.diffplug.spotless" version "8.1.0" apply false
}

allprojects {
    repositories {
        mavenCentral()
    }
}

subprojects {
    group = 'net.spookly.kodama'
    version = project.version

    apply plugin: 'java'
    apply plugin: 'io.freefair.lombok'
    apply plugin: 'com.diffplug.spotless'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }

    spotless {
        java {
            removeUnusedImports()
            importOrder('java', 'javax', '', 'de.spookly', '')
            leadingTabsToSpaces(4)
            endWithNewline()
        }
    }
}
